fix layout issues

--- a/css/main.css
+++ b/css/main.css
@@ -67,19 +67,20 @@ body {
   font-size: 2.5rem;
   text-align: center;
 }
-.header-text .social-link,
-.header-text .social-link:link,
-.header-text .social-link:visited {
+.header-text .social-link {
   text-decoration: none;
   color: black;
-}
-
-.fab,
-.far {
+  cursor: pointer;
   transition: transform 0.2s;
 }
-.fab:hover,
-.far:hover {
+.header-text .social-link:hover {
+  transform: scale(1.1);
+}
+
+.field i {
+  transition: all 0.2s;
+}
+.field i:hover {
   transform: scale(1.1);
 }
 
@@ -99,6 +100,7 @@ body {
   text-decoration: none;
   width: 50%;
   padding: 0.75rem 2rem;
+  cursor: pointer;
   border-radius: 10rem;
   border: none;
   font-size: 1rem;
@@ -121,6 +123,7 @@ body {
   color: white;
   background-color: #229ff8;
   padding: 2px 5px;
+  cursor: pointer;
   text-transform: uppercase;
   border-radius: 3px;
   transition: all 0.3s;
@@ -147,6 +150,7 @@ body {
 .work {
   background-color: #eee;
   padding: 3rem;
+  align-items: stretch;
 }
 
 .work__title {
@@ -206,6 +210,7 @@ body {
   height: 200px;
   width: 200px;
   border-radius: 50%;
+  object-fit: cover;
 }
 
 .profile-text {
@@ -222,6 +227,10 @@ body {
 .main-footer .field {
   padding-top: 1rem;
   text-align: center;
+}
+.main-footer .field .social-link-footer {
+  padding: 0 3px;
+  cursor: pointer;
 }
 .main-footer .tagline {
   text-align: center;
@@ -337,7 +346,6 @@ body {
   .project-thumbnail {
     width: 40%;
     margin-bottom: 2rem;
-    height: 350px;
   }
   .project-thumbnail img {
     width: 100%;
