--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -3,6 +3,7 @@
 	text-decoration: none;
 	width: 50%;
 	padding: .75rem 2rem;
+	cursor: pointer;
 	border-radius: 10rem;
 	border: none;
 	font-size: 1rem;
@@ -25,6 +26,7 @@
 	color: white;
 	background-color: #229ff8;
 	padding: 2px 5px;
+	cursor: pointer;
 	text-transform: uppercase;
 	border-radius: 3px;
 	transition: all .3s;
