--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -38,17 +38,19 @@
 		text-align: center;
 	}
 
-	.social-link,
-	.social-link:link,
-	.social-link:visited {
+	.social-link {
 		text-decoration: none;
 		color: black;
+		cursor: pointer;
+		transition: transform .2s;
+		&:hover {
+			transform: scale(1.1);
+		}
 	}
 }
 
-.fab,
-.far {
-	transition: transform .2s;
+.field i {
+	transition: all .2s;
 	&:hover {
 		transform: scale(1.1);
 	}
