--- a/scss/layout/_mq.scss
+++ b/scss/layout/_mq.scss
@@ -75,7 +75,6 @@
 	.project-thumbnail {
 		width: 40%;
 		margin-bottom: 2rem;
-		height: 350px;
 		img {
 			width: 100%;
 			margin: 0 auto;
